base files added

--- a/elements.html
+++ b/elements.html
@@ -24,7 +24,7 @@
         
         <section class="feature">
             <div class="container">
-                <h1>SAMPLE PAGE</h1>
+                <h1>ELEMENTS</h1>
             </div>
         </section>
         
