--- a/page.html
+++ b/page.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="Myhedspace is a free website templates project created by Jose Erlino Lontok">
         <title>Myhedspace Starter</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         
