base files added

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="description" content="Myhedspace is a free website templates project created by Jose Erlino Lontok">
         <title>Myhedspace Starter</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         
         <nav id="site-nav">
             <div class="fc container">
-                <a href="index.html" class="brand">Myhed<span>space</span></a>
+                <a href="index.html" class="brand">Myhedspace <span>Starter</span></a>
                 <ul class="nav fc fc-e">
                     <li><a href="index.html">Home</a></li>                    
                     <li><a href="page.html">Sample Page</a></li>
