base files added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <section class="fgrid fgrid-3">
                     <div class="col">
                         <div class="card">
-                            <a href="#"><img src="../img/myhedspace-starter.jpg" alt="thumb" class="thumb" /></a>
+                            <a href="#"><img src="img/myhedspace-starter.jpg" alt="thumb" class="thumb" /></a>
                             <header>
                                 <h3 class="name txt-c">Myhedspace Starter</h3>
                                 <div class="links">
@@ -54,7 +54,7 @@
                     </div> 
                     <div class="col">
                         <div class="card">
-                            <a href="#"><img src="../img/ziggy-bootstrap.jpg" alt="thumb" class="thumb" /></a>
+                            <a href="#"><img src="img/ziggy-bootstrap.jpg" alt="thumb" class="thumb" /></a>
                             <header>
                                 <h3 class="name txt-c">Ziggy Bootstrap</h3>
                                 <div class="links">
@@ -66,7 +66,7 @@
                     </div> 
                     <div class="col">
                         <div class="card">
-                            <a href="#"><img src="../img/explore-bootstrap.jpg" alt="thumb" class="thumb" /></a>
+                            <a href="#"><img src="img/explore-bootstrap.jpg" alt="thumb" class="thumb" /></a>
                             <header>
                                 <h3 class="name txt-c">Explore Bootstrap</h3>
                                 <div class="links">
